--- a/Initiatives.html
+++ b/Initiatives.html
@@ -26,13 +26,13 @@
             <a class="nav-link" href="./About.html">О нас</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./Team.html">Состав</a>
+            <a class="nav-link" href="./Team.html">Состав</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Projects.html">Проекты</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="./Initiatives.html">Инициативы</a>
+            <a class="nav-link active"  href="./Initiatives.html">Инициативы</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="#">Конкурс</a>
@@ -49,36 +49,27 @@
 <main>
   <div class="container">
     <br>
-    <h1 class="text-center" >Мария Николаевна Романова</h1>
+    <h1 class="text-center" >Инициативы</h1>
     <hr>
-    <h3 class="text-center">Председатель Молодёжного парламента</h3>
-    <div class="row">
-        <div class="col">
-            <img src="./img/H8l2UfRkVCw.jpg" class="person" alt="...">
+    <div class="row justify-content-center align-items-center">
+        <div class="col col-auto text-center">
+          <div class="intiatives">
+            <img class="intiative" src="./img/001.jpg" alt="">
+           <p>ЖИЛИЩНО-КОММУНАЛЬНЫЙ ПРОРЫВ</p>
+          </div>
         </div>
-        <div class="col person text-center">
-          <br>
-            <div class="row g-4 justify-content-center align-items-center">
-              <div class="col">
-                <a href="https://vk.com/marie_13"><img src="./icon/VK_black.svg"  class="icon" alt=""></a>
-              </div>
-              <div class="col">
-                <a href="https://t.me/mromanovaa"><img src="./icon/Telegram_black.svg" class="icon" alt=""></a>
-              </div>
-              <div class="col">
-                <a href="https://www.tiktok.com/@romanova_marie"><img src="./icon/TikTok_black.svg" class="icon" alt=""></a>
-              </div>
-              <div class="col">
-                <a href="mailto:mpkrk24@gmail.com"><img src="./icon/Mail.ru_black.svg" class="icon" alt=""></a>
-              </div>
-            </div>
-            <hr>
-            <h3>О себе</h3>
-            <h3>Образование</h3>
-            <h3>Трудовая деятельность</h3>
-            <h3>Общественная деятельность</h3>
+        <div class="col col-auto text-center">
+          <div class="intiatives">
+            <img class="intiative" src="./img/002.jpg" alt="">
+           <p>О ГОСУДАРСТВЕННОЙ МОЛОДЕЖНОЙ ПОЛИТИКЕ КРАСНОЯРСКОГО КРАЯ</p>
+          </div>
         </div>
-    </div>
+        <div class="col col-auto text-center">
+          <div class="intiatives">
+            <img class="intiative" src="./img/003.jpg" alt="">
+           <p>ПРО СОЦИАЛЬНЫЕ УСЛУГИ</p>
+          </div>
+        </div>
   </div>
   <br>
 </main>  
