--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,7 @@
             <a class="nav-link active" href="./Projects.html">Проекты</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#">Инициативы</a>
+            <a class="nav-link"  href="./Initiatives.html">Инициативы</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="#">Конкурс</a>
