--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="./Projects.html">Проекты</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#">Инициативы</a>
+            <a class="nav-link"  href="./Initiatives.html">Инициативы</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="#">Конкурс</a>
@@ -97,8 +97,8 @@
     <div class="container">
       <h1 class="text-center HMycolor" >Новости</h1>
       <hr class="H1Mycolor">
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
+      <div class="row  justify-content-center align-items-center row-cols-3 g-4">
+        <div class="col cards">
           <div class="card">
             <img src="./img/1jJB3IHgDN8.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -110,7 +110,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col cards">
           <div class="card">
             <img src="./img/YKdnZwgOyQk.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -122,7 +122,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col cards">
           <div class="card">
             <img src="./img/FtNxBupVgfM.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -135,7 +135,9 @@
           </div>
         </div>
       </div>
-      <a href="#" class="btn btn-outline-light my-3">Архив новостей</a>
+      <div>
+        <a href="#" class="btn btn-outline-light my-3">Архив новостей</a>
+      </div>
       <br>
     </div>
   </div>
