--- a/Projects.html
+++ b/Projects.html
@@ -52,25 +52,35 @@
     <h1 class="text-center" >Проекты</h1>
     <hr>
     <div class="row g-4 justify-content-center align-items-center">
-        <div class="col mb-3 text-center projects">
-            <img class="project" src="./img/AvrPnbPHEdw.jpg" alt="">
-           <p>PRO-парламентаризм </p>
+        <div class="col mb-3 text-center  col-auto">
+            <div class="projects">
+                <img class="project" src="./img/AvrPnbPHEdw.jpg" alt="">
+                <p>PRO-парламентаризм </p>
+            </div>
         </div>
-        <div class="col mb-3 text-center projects">
+        <div class="col mb-3 text-center  col-auto">
+            <div class="projects">
             <img class="project" src="./img/bol_ist.jpeg" alt="">
             <p>Большая история </p>
+            </div>  
         </div>
-        <div class="col mb-3 text-center projects">
+        <div class="col mb-3 text-center  col-auto">
+            <div class="projects">
             <img class="project" src="./img/1Som1Bkzj7s.jpg" alt="">
             <p>Молодёжные советы Красноярского края </p>
+            </div>
         </div>
-        <div class="col mb-3 text-center projects">
+        <div class="col mb-3 text-center  col-auto">
+            <div class="projects">
             <img class="project" src="./img/Pl4JJYLsmV8.jpg" alt="">
             <p>Сибиркое слово </p>
+            </div>
         </div>
-        <div class="col mb-3 text-center projects">
+        <div class="col mb-3 text-center col-auto">
+            <div class="projects">
             <img class="project" src="./img/EygDh6y2-z8.jpg" alt="">
             <p>Арктического форума "Молодёжь Севера"</p>
+            </div>
         </div>
   </div>
   <br>
