--- a/Initiatives.html
+++ b/Initiatives.html
@@ -53,7 +53,7 @@
             <a class="nav-link"  href="#">Конкурс</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#">Контакты</a>
+            <a class="nav-link"  href="./Сontacts.html">Контакты</a>
           </li>
         </ul>
       </div>
