--- a/About.html
+++ b/About.html
@@ -67,7 +67,7 @@
     <h1 class="text-center" >О нас</h1>
     <hr>
     <p>Молодежный парламент Красноярского края - коллегиальный совещательный орган при краевом Законодательном Собрании, представляющий интересы молодежи на региональном и федеральном уровнях.</p>
-    <p> Молодежный Парламент при Законодательном Собрании Красноярского края образован 30 октября 2008 года постановлением Законодательного Собрания Красноярского края № 7 – 2332П. На данный момент действует состав VI созыва Молодёжного Парламента. </p>
+    <p> Молодежный Парламент при Законодательном Собрании Красноярского края образован 30 октября 2008 года постановлением Законодательного Собрания Красноярского края № 7 – 2332П. На данный момент действует состав VII созыва Молодёжного Парламента. </p>
     <p>  Основными задачами Молодежного парламента являются:</p>
     <p class="My">  — разработка и внесение предложений, затрагивающих интересы молодежи и других категорий населения края, в органы государственной власти Красноярского края и органы местного самоуправления Красноярского края в порядке, предусмотренном законодательством Российской Федерации и законодательством Красноярского края; </p>
     <p class="My">  — участие в подготовке нормативных правовых актов органов государственной власти края;</p>
@@ -90,15 +90,7 @@
     <p class="My "> Молодежный экономический саммит </p>
     <p class="My "> Молодёжная приёмная </p>
     <p class="My "> Сибирская лига дебатов </p>
-    <p class="My "> Школа молодого парламентария </p>
-   <br>
-   <h1 class="text-center" >Контакты</h1>
-    <hr>
-    <p>660093, г. Красноярск, Остров Отдыха, д. 6, оф. 3-08, mpkrk24@gmail.com</p>
-    <p>Официальное сообщество: vk.com/mpkrk24</p>
-    <p>Instagram: @molparlament24</p>
-
-    
+    <p class="My "> Школа молодого парламентария </p> 
     <br>
   </div>
 </main>  
