--- a/Сontacts.html
+++ b/Сontacts.html
@@ -77,7 +77,7 @@
                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Acd8608d22215e70ed4ed5492e51f3686c9d9e1b2f97601f90b4362b06f59796c&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
               </div>
             </div>
-            <div class="col">
+            <div class="col my-col">
         <form>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Фамилия Имя Отчество</label>
@@ -95,7 +95,7 @@
                 <label for="exampleFormControlTextarea1" class="form-label">Текст обращения</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+            <button type="button" class="btn MYbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
               Отправить
             </button>
         </form>
@@ -109,12 +109,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <h5 class="modal-title" id="staticBackdropLabel">Уведомление</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Understood</button>
+      <div class="modal-body text-center">
+        <p>Спасибо за обращение!!!</p>
       </div>
     </div>
   </div>
