--- a/Initiatives.html
+++ b/Initiatives.html
@@ -50,7 +50,7 @@
             <a class="nav-link active"  href="./Initiatives.html">Инициативы</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#">Конкурс</a>
+            <a class="nav-link"  href="./Сontest.html">Конкурс</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="./Сontacts.html">Контакты</a>
