--- a/Сontacts.html
+++ b/Сontacts.html
@@ -18,7 +18,7 @@
 <!-- /Yandex.Metrika counter -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Главная страница</title>
+    <title>Контакты</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="./css/style.css" rel="stylesheet">
@@ -50,7 +50,7 @@
             <a class="nav-link"  href="./Initiatives.html">Инициативы</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#">Конкурс</a>
+            <a class="nav-link"  href="./Сontest.html">Конкурс</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="./Сontacts.html">Контакты</a>
