--- a/Сontest.html
+++ b/Сontest.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
   <head>
-        <!-- Yandex.Metrika counter -->
+    <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
@@ -18,7 +18,7 @@
 <!-- /Yandex.Metrika counter -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Проекты</title>
+    <title>Конкурс</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="./css/style.css" rel="stylesheet">
@@ -38,13 +38,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="./About.html">О нас</a>
+            <a class="nav-link active" href="./About.html">О нас</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Team.html">Состав</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./Projects.html">Проекты</a>
+            <a class="nav-link" href="./Projects.html">Проекты</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="./Initiatives.html">Инициативы</a>
@@ -64,41 +64,27 @@
 <main>
   <div class="container">
     <br>
-    <h1 class="text-center" >Проекты</h1>
+    <h1 class="text-center" >Конкурс</h1>
     <hr>
-    <div class="row g-4 justify-content-center align-items-center">
-        <div class="col mb-3 text-center  col-auto">
-            <div class="projects">
-                <img class="project" src="./img/AvrPnbPHEdw.jpg" alt="">
-                <p>PRO-парламентаризм </p>
-            </div>
-        </div>
-        <div class="col mb-3 text-center  col-auto">
-            <div class="projects">
-            <img class="project" src="./img/bol_ist.jpeg" alt="">
-            <p>Большая история </p>
-            </div>  
-        </div>
-        <div class="col mb-3 text-center  col-auto">
-            <div class="projects">
-            <img class="project" src="./img/1Som1Bkzj7s.jpg" alt="">
-            <p>Молодёжные советы Красноярского края </p>
-            </div>
-        </div>
-        <div class="col mb-3 text-center  col-auto">
-            <div class="projects">
-            <img class="project" src="./img/Pl4JJYLsmV8.jpg" alt="">
-            <p>Сибиркое слово </p>
-            </div>
-        </div>
-        <div class="col mb-3 text-center col-auto">
-            <div class="projects">
-            <img class="project" src="./img/EygDh6y2-z8.jpg" alt="">
-            <p>Арктического форума "Молодёжь Севера"</p>
-            </div>
-        </div>
+    <p class="My">Конкурсный отбор состоит из следующих этапов:</p>
+    <p class="My">1. Прием заявок и видеообращений кандидатов;</p>
+    <p class="My">2. Очное собеседование и прохождение тестирования с защитой эссе по волнующей кандидата проблеме и путях ее решения;</p>
+    <p class="My">3. Голосование на сайте. </p>
+    <p>Участников конкурса ждут следующие этапы прохождения конкурсного отбора. Желаем удачи! </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
-  <br>
 </main>  
 <footer>
   <div class="container">
