--- a/Team.html
+++ b/Team.html
@@ -35,8 +35,8 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="./About.html">О нас</a>
           </li>
@@ -80,45 +80,45 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/perik.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Перик Денис Валерьевич</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Заместитель председателя Молодёжного парламента по законотворческой деятельности</p>
               </div>
           </div>
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/ishutin.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Ишутин Иван Николаевич</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Заместитель председателя Молодёжного парламента по проектной деятельности</p>
               </div>
           </div>
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/koval.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Коваль Денис Вячеславович</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Заместитель председателя комитета по делам Севера и коренных малочисленных народов</p>
               </div>
           </div>
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/kisterskii.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Кистерский Константин Александрович</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Заместитель председателя Молодёжного парламента по внешним связям</p>
               </div>
           </div>
       </div>
@@ -129,12 +129,12 @@
     <div class="row g-4 justify-content-center align-items-center">
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/Starodymova.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Стародумова Арина Андреевна</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Руководитель Юридической службы</p>
               </div>
           </div>
       </div>
@@ -151,34 +151,23 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
+              <a href="./Person.html"><img src="./img/Navrodskaya.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Навродская Наталья Владимировна</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Член Юридической службы</p>
               </div>
           </div>
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
+              <a href="./Person.html"><img src="./img/lasica.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Ласица Анастасия Денисовна</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
-              <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Член Юридической службы</p>
               </div>
           </div>
       </div>
@@ -189,12 +178,12 @@
     <div class="row g-4 justify-content-center align-items-center">
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
+              <a href="./Person.html"><img src="./img/kisterskii.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Кистерский Константин Александрович</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Председатель комитета по государственному устройству, законодательству и местному самоуправлению</p>
               </div>
           </div>
       </div>
@@ -205,43 +194,65 @@
               <p>Алексей Дмитриевич Широков</p>
               <br>
               <br>
-              <p>Заместитель Председателя Комитета</p>
+              <p>Заместитель Председателя комитета по государственному устройству, законодательству и местному самоуправлению</p>
             </div>
         </div>
     </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
+              <a href="./Person.html"><img src="./img/Petrov.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Петров Евгений Вячеславович</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
               </div>
           </div>
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
+              <a href="./Person.html"><img src="./img/perik.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Перик Денис Валерьевич</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
               </div>
           </div>
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
+              <a href="./Person.html"><img src="./img/Navrodskaya.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Навродская Наталья Владимировна</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
               </div>
           </div>
       </div>
+      <div class="col col-auto mb-3">
+        <div class="MY_card">
+            <a href="./Person.html"><img src="./img/Drozd.jpg" class="MY_card" alt="..."> </a>
+            <div class="MY_text">
+              <p>Дрозд Алексей Валерьевич</p>
+              <br>
+              <br>
+              <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
+            </div>
+        </div>
+    </div>
+    <div class="col col-auto mb-3">
+      <div class="MY_card">
+          <a href="./Person.html"><img src="./img/Paramonova.png" class="MY_card" alt="..."> </a>
+          <div class="MY_text">
+            <p>Парамонова Яна Алексеевна</p>
+            <br>
+            <br>
+            <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
+          </div>
+      </div>
+  </div>
     </div>
     <br>
   </div>
