Добавление текста на персональную страницу

--- a/Person.html
+++ b/Person.html
@@ -71,7 +71,7 @@
         <div class="col">
             <img src="./img/H8l2UfRkVCw.jpg" class="person" alt="...">
         </div>
-        <div class="col person text-center">
+        <div class="col person">
           <br>
             <div class="row g-4 justify-content-center align-items-center">
               <div class="col">
@@ -88,10 +88,19 @@
               </div>
             </div>
             <hr>
-            <h3>О себе</h3>
-            <h3>Образование</h3>
-            <h3>Трудовая деятельность</h3>
-            <h3>Общественная деятельность</h3>
+            <h3 align="center">О себе</h3>
+            <p >Дата рождения: 21.09.1998</p>
+            <h3 align="center">Образование</h3>
+            <p>Сибирский государственный университет науки и технологий им. ак. М. Ф. Решетнева, специальность «Химическая технология» (бакалавриат, 2016-2020)</p>
+            <p>Курс профессиональной переподготовки «Учитель химии: Преподавание химии в образовательной организации»</p>
+            <p>Повышение квалификации «Ликвидация накопленного экологического ущерба для обеспечения экологической безопасности», Российский университет дружбы народов</p> 
+            <p>Магистратура, Сибирский государственный университет науки и технологий им. ак. М. Ф. Решетнева, специальность «Химическая технология»</p>
+            <h3 align="center">Трудовая деятельность</h3>
+            <p>2020-2021 - ИХХТ СО РАН, инженер</p>
+            <p>2022- по насто. вр. - КГАУ ЦМИ "Форум", специалист по работе с молодежью</p>
+            <h3 align="center">Общественная деятельность</h3>
+            <p>С 2019 года - член Молодежного Парламента при Законодательном Собрании Красноярского края </p>
+            <p>С 2019 года - член Регионального штаба Красноярского регионального отделения Всероссийской общественной организации «Молодая Гвардия Единой России»</p>
         </div>
     </div>
   </div>
