--- a/Team.html
+++ b/Team.html
@@ -24,7 +24,7 @@
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   </head>
   <body>
     
@@ -71,7 +71,7 @@
           <div class="MY_card">
               <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <h5>Мария Николаевна Романова</h5>
                 <br>
                 <br>
                 <p>Председатель молодёжного парламента</p>
@@ -82,7 +82,7 @@
           <div class="MY_card">
               <a href="./Person.html"><a href="./Person.html"><img src="./img/perik.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Перик Денис Валерьевич</p>
+                <h5>Перик Денис Валерьевич</h5>
                 <br>
                 <br>
                 <p>Заместитель председателя Молодёжного парламента по законотворческой деятельности</p>
@@ -93,7 +93,7 @@
           <div class="MY_card">
               <a href="./Person.html"><a href="./Person.html"><img src="./img/ishutin.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Ишутин Иван Николаевич</p>
+                <h5>Ишутин Иван Николаевич</h5>
                 <br>
                 <br>
                 <p>Заместитель председателя Молодёжного парламента по проектной деятельности</p>
@@ -104,7 +104,7 @@
           <div class="MY_card">
               <a href="./Person.html"><a href="./Person.html"><img src="./img/koval.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Коваль Денис Вячеславович</p>
+                <h5>Коваль Денис Вячеславович</h5>
                 <br>
                 <br>
                 <p>Заместитель председателя комитета по делам Севера и коренных малочисленных народов</p>
@@ -115,7 +115,7 @@
           <div class="MY_card">
               <a href="./Person.html"><a href="./Person.html"><img src="./img/kisterskii.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Кистерский Константин Александрович</p>
+                <h5>Кистерский Константин Александрович</h5>
                 <br>
                 <br>
                 <p>Заместитель председателя Молодёжного парламента по внешним связям</p>
@@ -131,7 +131,7 @@
           <div class="MY_card">
               <a href="./Person.html"><a href="./Person.html"><img src="./img/Starodymova.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
-                <p>Стародумова Арина Андреевна</p>
+                <h5>Стародумова Арина Андреевна</h5>
                 <br>
                 <br>
                 <p>Руководитель Юридической службы</p>
@@ -142,7 +142,7 @@
           <div class="MY_card">
               <img src="./img/216A0506.jpg" class="MY_card" alt="...">
               <div class="MY_text">
-                <p>Алексей Дмитриевич Широков</p>
+                <h5>Алексей Дмитриевич Широков</h5>
                 <br>
                 <br>
                 <p>Заместитель Председателя Юридической службы</p>
@@ -153,7 +153,7 @@
           <div class="MY_card">
               <a href="./Person.html"><img src="./img/Navrodskaya.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Навродская Наталья Владимировна</p>
+                <h5>Навродская Наталья Владимировна</h5>
                 <br>
                 <br>
                 <p>Член Юридической службы</p>
@@ -164,7 +164,7 @@
           <div class="MY_card">
               <a href="./Person.html"><img src="./img/lasica.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Ласица Анастасия Денисовна</p>
+                <h5>Ласица Анастасия Денисовна</h5>
                 <br>
                 <br>
                 <p>Член Юридической службы</p>
@@ -180,7 +180,7 @@
           <div class="MY_card">
               <a href="./Person.html"><img src="./img/kisterskii.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Кистерский Константин Александрович</p>
+                <h5>Кистерский Константин Александрович</h5>
                 <br>
                 <br>
                 <p>Председатель комитета по государственному устройству, законодательству и местному самоуправлению</p>
@@ -191,7 +191,7 @@
         <div class="MY_card">
             <img src="./img/216A0506.jpg" class="MY_card" alt="...">
             <div class="MY_text">
-              <p>Алексей Дмитриевич Широков</p>
+              <h5>Алексей Дмитриевич Широков</h5>
               <br>
               <br>
               <p>Заместитель Председателя комитета по государственному устройству, законодательству и местному самоуправлению</p>
@@ -202,10 +202,10 @@
           <div class="MY_card">
               <a href="./Person.html"><img src="./img/Petrov.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Петров Евгений Вячеславович</p>
+                <h5>Петров Евгений Вячеславович</p>
                 <br>
                 <br>
-                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
+                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</h5>
               </div>
           </div>
       </div>
@@ -213,7 +213,7 @@
           <div class="MY_card">
               <a href="./Person.html"><img src="./img/perik.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Перик Денис Валерьевич</p>
+                <h5>Перик Денис Валерьевич</h5>
                 <br>
                 <br>
                 <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
@@ -224,7 +224,7 @@
           <div class="MY_card">
               <a href="./Person.html"><img src="./img/Navrodskaya.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
-                <p>Навродская Наталья Владимировна</p>
+                <h5>Навродская Наталья Владимировна</h5>
                 <br>
                 <br>
                 <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
@@ -235,7 +235,7 @@
         <div class="MY_card">
             <a href="./Person.html"><img src="./img/Drozd.jpg" class="MY_card" alt="..."> </a>
             <div class="MY_text">
-              <p>Дрозд Алексей Валерьевич</p>
+              <h5>Дрозд Алексей Валерьевич</h5>
               <br>
               <br>
               <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
@@ -246,7 +246,7 @@
       <div class="MY_card">
           <a href="./Person.html"><img src="./img/Paramonova.png" class="MY_card" alt="..."> </a>
           <div class="MY_text">
-            <p>Парамонова Яна Алексеевна</p>
+            <h5>Парамонова Яна Алексеевна</h5>
             <br>
             <br>
             <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
