--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   </head>
   <body>
     
@@ -108,10 +108,10 @@
       </button>
     </div>
   </div>
-  <div class="Mycolor">
     <div class="container">
-      <h1 class="text-center HMycolor" >Новости</h1>
-      <hr class="H1Mycolor">
+      <br>
+      <h1 class="text-center" >Новости</h1>
+      <hr>
       <div class="row  justify-content-center align-items-center row-cols-3 g-4">
         <div class="col cards">
           <div class="card">
@@ -154,9 +154,6 @@
         <a href="#" class="btn btn-outline-light my-3">Архив новостей</a>
       </div>
       <br>
-    </div>
-  </div>
-  <div class="container">
 <h1 class="text-center" >Наша деятельность</h1>
 <hr>
 <div class="row row-cols-1 row-cols-md-1 g-4">
